[package]
name = "shadow-rs"
version = "2.5.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
# the rlib crate is so that we build and run doctests
crate-type = ["rlib", "staticlib"]

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
atomic_refcell = "0.1"
backtrace = "0.3.67"
bitflags = "2.1"
# custom version of the bytes crate required to make the 'try_unsplit' method public
# issue: https://github.com/tokio-rs/bytes/issues/287
# pr: https://github.com/tokio-rs/bytes/pull/513
bytes = { git = "https://github.com/shadow/bytes", rev = "c48bd4439e7e043300521925524ecdcce7ff6bcc" }
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
crossbeam = "0.8.2"
gml-parser = { path = "../lib/gml-parser" }
libc = "0.2"
# don't log debug or trace levels in release mode
log = { version = "0.4", features = ["release_max_level_debug"] }
logger = { path = "../lib/logger" }
shadow-shim-helper-rs = { path = "../lib/shadow-shim-helper-rs" }
lzma-rs = "0.3"
memoffset = "0.8.0"
merge = "0.1"
nix = "0.26.2"
once_cell = "1.17"
petgraph = "0.6"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
rand_xoshiro = "0.6.0"
rayon = "1.7.0"
regex = "1"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9"
shadow_shmem = { path = "../lib/shmem" }
shadow_tsc = { path = "../lib/tsc" }
signal-hook = "0.3.15"
static_assertions = "1.1.0"
syscall-logger = { path = "../lib/syscall-logger" }
tempfile = "3.5"
vasi-sync = { path = "../lib/vasi-sync" }
# TODO: switch to upstream crate if/when they merge and release
# https://github.com/dylanmckay/vsprintf/pull/2
#
# Alternatively, just call libc's vsprintf directly when the unstable feature
# `c_variadic` is stabilized, or if we decide to enable it anyway.
# https://github.com/rust-lang/rust/issues/44930
vsprintf = { git = "https://github.com/shadow/vsprintf", rev = "fa9a307e3043a972501b3157323ed8a9973ad45a" }
which = "4.4.0"

[features]
perf_timers = []

[build-dependencies]
shadow-build-common = { path = "../lib/shadow-build-common" }
bindgen = { version = "0.64.0" }
cbindgen = { version = "0.24.3" }
cc = { version = "1.0", features = ["parallel"] }
system-deps = "6.0"

[package.metadata.system-deps]
# Keep consistent with the minimum version number in src/CMakeLists.txt
glib = { name = "glib-2.0", version = "2.32" }
